[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Charli3 Multi-Sig ODV Node Backend"
authors = ["talhahussain7 <talhahussainb@gmail.com>"]
readme = "README.md"
packages = [{ include = "node" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PyYAML = "^6.0"
pycardano = { git = "https://github.com/Charli3-Official/pycardano.git", branch = "odv-multisig"}
odv-multisig-charli3-offchain-core = { git = "https://***REMOVED***@github.com/Charli3-Official/odv-multisig-charli3-offchain-core.git", branch = "feature/node-bg-task-for-reward-calc" }
charli3-dendrite = {git = "https://github.com/talhahussain7/charli3-dendrite.git", branch = "feat/odv-multisig"}
aiohttp = "^3.8.4"
python-json-logger = "^2.0.7"
pycryptodome = "^3.18.0"
types-pyyaml = "^6.0.12.12"
asyncpg = "^0.29.0"
cachetools = "^5.3.3"
fastapi = "^0.111.0"
toml = "^0.10.2"
ccxt = "^4.4.47"
numpy = "^2.2.1"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
mocket = "^3.11.0"
pytest = "^7.2.1"
boto3 = "^1.26.63"
pylint = "^2.16.1"
black = "^24.10.0"
pytest-asyncio = "^0.20.3"
sure = "^2.0.0"
mypy = "^1.13.0"
ruff = "^0.7.0"
pre-commit = "^4.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
